# stroodlr

./: CHANGES.md  CMakeLists.txt  Makefile  README.md  client.cpp  server.cpp  tools.cpp  tools.h
Tools/: loggertools.cpp  tools.cpp  tools.h
include/: clienttools.cpp  clienttools.h  loggertools.cpp  loggertools.h  servertools.cpp  servertools.h  sockettools.cpp  sockettools.h  tools.cpp  tools.h
src/: client.cpp  client.cpp~  server.cpp  server.cpp~
